# python-playground

./: .gitignore  README.md  docker-compose.yml
ai/langgraph/: Makefile  pyproject.toml
ai/langgraph/examples/basics/chat/: main.py
ai/langgraph/examples/basics/human/: main.py
ai/langgraph/examples/basics/tools/: main.py
ai/langgraph/examples/chat/: main.py
ai/langgraph/examples/memory/: main.py
ai/langgraph/examples/stocks_chatbot/: Makefile  pyproject.toml
ai/langgraph/examples/stocks_chatbot/app/: graph.py  main.py  resources.py  tools.py
ai/langgraph/examples/stocks_chatbot/app/graph/: graph.py  tools.py
ai/langgraph/examples/stocks_chatbot/app/resources/: alpha_vantage.py  resources.py
ai/langgraph/examples/tools/: main.py
ai/langgraph/learning/basics/: Makefile  pyproject.toml
ai/langgraph/learning/basics/app/state/: main.py
ai/langgraph/learning/basics/src/agents/handoffs/: main.py
ai/langgraph/learning/basics/src/agents/supervisor/: main.py
ai/langgraph/learning/basics/src/agents/swarm/: main.py
ai/langgraph/learning/basics/src/basics/memory/: main.py
ai/langgraph/learning/basics/src/basics/time/: main.py
ai/langgraph/learning/server/: pyproject.toml
ai/langgraph/learning/server/examples/: api_test.py
ml/code/tokenizer/: main.py  o200k.txt
ml/learning/tfdl/: README.md
tfdl/Course/00-Crash-Course-Basics/: 05-Crash-Course-Review-Exercises.ipynb
tfdl/Course/03-Convolutional-Neural-Networks/: 01-MNIST-with-CNN.ipynb
tfdl/Course/09-Course-Slides-and-Docs/: TensorFlow Summary.docx
work/: Hello World.ipynb  Untitled.ipynb
(+17 files in other folders)
