[project]
name = "langgraph-playground"
version = "0.1.0"
description = "Playground of LangGraph"
requires-python = ">=3.9"
dependencies = [
    "langchain-tavily>=0.1.6",
    "langchain[anthropic,google-genai]>=0.3.25",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
