[project]
name = "langgraph-playground-basics"
version = "0.1.0"
description = "Playground of LangGraph - Basics"
requires-python = ">=3.13"
dependencies = [
    "langchain-tavily>=0.1.6",
    "langchain[anthropic,google-genai]>=0.3.25",
    "langgraph>=0.4.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
