[project]
name = "langgraph-playground"
version = "0.1.0"
description = "Playground of LangGraph - Basics"
requires-python = ">=3.13"
dependencies = [
    "langchain-tavily>=0.1.6",
    "langchain[anthropic,google-genai]>=0.3.25",
    "langgraph>=0.4.5",
    "langgraph-supervisor>=0.0.25",
    "langgraph-swarm>=0.0.11",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
